--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,7 +1,11 @@
-.card {
-    max-width: calc(25% - 100px);
+/* .card {
+    max-width: calc(25% - 50px);
     height: auto;
-    padding: 2%;
+    padding: 1%;
+    border: 1px solid darkcyan;
+    box-shadow: 1px;
+    border-radius: 10px;
+    margin: 2px;
 }
 
 .card img {
@@ -11,4 +15,19 @@
     object-fit: cover;
     padding-bottom: 2%;
     border-radius: 10px;
+} */
+
+.add-to-cart {
+    position: absolute;
+    top: 60%;
+    left: 28%;
+    background-color: #ffffff;
+    padding: .7em;
+    border-radius: 5px;
+    opacity: 0;
+    transition: all .5s ease;
+}
+
+.group:hover > .mt-4 > .add-to-cart{
+    opacity: .75;
 }
