--- a/src/admin/Admin.css
+++ b/src/admin/Admin.css
@@ -3,3 +3,54 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.admin-body {
+    min-height: 100vh;
+    background-color: #fff;
+}
+
+.sidebar {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    bottom: 20px;
+    width: 300px;
+    border-radius: 10px;
+    box-sizing: initial;
+    border-left: 5px solid #4d5bf9;
+    background: #4d5bf9;
+    transition: width 0.5s;
+}
+
+.sidebar ul {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding-left: 5px;
+    padding-top: 40px;
+}
+
+.sidebar ul li {
+    position: relative;
+    list-style: none;
+    width: 100%;
+}
+
+.sidebar ul li a {
+    position: relative;
+    display: block;
+    width: 100%;
+    display: flex;
+    text-decoration: none;
+    color: #fff;
+}
+
+.sidebar ul li a .icon {
+    position: relative;
+    display: block;
+    min-width: 60px;
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+}
